.provarCaches/00D410000011HE0EAM/objects/rstk__metadata_other__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>rstk__isHtmlFormatted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isHtmlFormatted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__isaccessible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isaccessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__isformula__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isformula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__isupdateable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isupdateable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__label__c</fullName>
        <label>label</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__length__c</fullName>
        <label>length</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__scale__c</fullName>
        <label>scale</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__type__c</fullName>
        <label>type</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>metadata_other</label>
</CustomObject>